--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,6 @@
 <section class="cart-show">
-
+<section class="cart-show">
+<% if !enhanced_cart.empty? %>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -48,5 +49,9 @@
       <% end %>
     </div>
   </div>
-
+  <% else %>
+  <%= link_to 'Soory Your Cart Is Empty! Click Here To Go Back To The Home Page!', {controller: 'products'}, class: 'alert alert-success' %>
+  <% end %>
+  
+  </section>
 </section>
