--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,9 +1,15 @@
 <article class="product">
+<% if product.quantity == 0 %>
+<aside class="sold-out" style="background-color:red; height:20px; width:80px;">
+  SOLD OUT !
+   </aside>
+<% end  %>
   <header>
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
     <% end %>
+ 
   </header>
   <p class="description">
     <%= product.description %>
@@ -16,7 +22,7 @@
       Details &raquo;
     <% end %>
   </footer>
-
+  
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
