--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -41,7 +41,7 @@
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-amount="<%= cart_subtotal_cents %>"
           data-name="Jungle"
-          data-description="Khurram Virani's Jungle Order"
+          data-description="Hadjira's Jungle Order"
           data-locale="auto"
           data-email="Hadjira@gmail.com"
           data-currency="cad">
