--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -21,13 +21,13 @@
           </a>
           <ul class="dropdown-menu">
             <% Category.all.each do |category| %>
-              <li><%= link_to category.name, category %></li>
+              <li><%= link_to  category.name %></li>
             <% end %>
           </ul>
         </li>
  
         <li>
-          <%= link_to 'About Us', controller: 'about' %>
+          <%= link_to 'About Us', about_index_path %>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -40,7 +40,8 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
-          </ul>
+            <li><%= link_to 'Categories', [:admin, :categories] %></li>          
+            </ul>
         </li>
         <li>
           <%= link_to cart_path do %>
