--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -29,6 +29,19 @@
         <li>
           <%= link_to 'About Us', about_index_path %>
         </li>
+        <% if !current_user%>
+        <li>
+        <div class="navbar-text">
+        <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+      </div>
+      </li>
+         <% else %>
+           <li>
+           <div class="navbar-text">
+           Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout' %>
+         </div>
+           </li>
+         <% end%>
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
@@ -48,6 +61,7 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        
       </ul>
     </div>
   </div>
