--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,6 +2,7 @@
 
   <header class="page-header">
     <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
+    <%= link_to '+ New Category', admin_categories_path, class: 'btn btn-info' %>
   </header>
 
   <article class="product-detail">
